# ComfyUI-Skeletonretarget

./: .gitignore  README.md  SkeletonRetarget_DesignDoc_v2.md  __init__.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt
nodes/: extract.py  face_landmarker.py  render_textured_face.py  reorient_face_mesh.py  transform.py  visualization.py
tests/: test_extract_split_data.py  test_face_landmarker.py  test_face_mesh_topology.py  test_facemesh_integration.py  test_facing_ratio.py  test_relative_retargeting.py  test_render_textured_face.py  test_reorient_face_mesh.py  test_rotation_utils.py  test_transform.py
utils/: definitions.py  face_mesh_topology.py  facing_ratio.py  geometry.py  rotation_utils.py
workflows/: sample_retarget_workflow (2).json  sample_retarget_workflow.json
